--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "@vueuse/schema-org": "^2.2.0",
     "eslint": "^8.41.0",
     "eslint-plugin-nuxt": "^4.0.0",
-    "nuxt": "^3.9",
+    "nuxt": "^3.5.1",
     "nuxt-schema-org": "^2.2.0",
     "prettier": "^2.8.8",
     "typescript": "^5.0.4"
@@ -30,10 +30,12 @@
     "@vue-final-modal/nuxt": "^1.0.0",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.3",
+    "@vuepic/vue-datepicker": "^5.3.0",
+    "axios": "^1.4.0",
     "eslint-plugin-vue": "^9.14.1",
     "moment": "^2.29.4",
-    "nuxt-simple-robots": "4.0.0",
-    "@nuxtjs/sitemap": "^5.0.1",
+    "nuxt-simple-robots": "2.3.0",
+    "nuxt-simple-sitemap": "2.7.0",
     "pinia": "^2.1.3",
     "sass": "^1.62.1",
     "vue": "^3.3.4",
