--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,8 @@
     "@vue-final-modal/nuxt": "^1.0.0",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.3",
+    "@vuepic/vue-datepicker": "^5.3.0",
+    "axios": "^1.4.0",
     "eslint-plugin-vue": "^9.14.1",
     "moment": "^2.29.4",
     "nuxt-simple-robots": "4.0.0",
